--- a/styles.css
+++ b/styles.css
@@ -10,23 +10,6 @@
        	}
 
 
-/*
-
-@font-face {
-  eot
-  woff2
-  woff
-  tty
-  
-  font-family: 'MyWebFont';
-  src: url('webfont.eot'); 
-  src: url('webfont.eot?#iefix') format('embedded-opentype'), 
-       url('webfont.woff2') format('woff2'),
-       url('webfont.woff') format('woff'), 
-       url('webfont.ttf')  format('truetype'), 
-}
-*/
-
 .flex-container {
   display: flex;
   justify-content: center;
@@ -80,6 +63,8 @@ height: 50px;
   align-items: center;
 
 
+
+
 }
 
 
@@ -108,6 +93,17 @@ a {
     text-decoration: none;
     display: inline-block;
 
+
+}
+
+
+a:hover {
+    color: red;
+}
+
+
+a:active {
+    color: blue;
 }
 
 h1 {
