--- a/styles.css
+++ b/styles.css
@@ -38,20 +38,27 @@ height: 500px;
 
 }
 .flex-container2 > div {
-	height: 500px;
-
+	height: 400px;
+  width: auto;
   justify-content: center;
   align-items: center;
-
   text-align: center;
+  background-color: 000000;
+  color: 000000;
 
 }
 
 .flex-container3 {
-height: 50px;
+  position: relative;
+    right: 20px;">
+  height: 50px;
   display: flex;
-  justify-content: right;
-  align-content:right;
+  justify-content: left;
+  align-content:left;
+  color: #000000;
+  
+  width:200px;
+  
 
 }
 
@@ -85,8 +92,9 @@ height: 50px;
 
 a {
 
-    background-color: #f44336;
+    background-color: #000000;
     height:30px;
+    width: 768px;
     color: white;
     padding: 14px 25px;
     text-align: center;
