--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,9 @@ height: 500px;
   display: flex;
   justify-content: left;
   align-content:left;
-  color: #000000;
+  background-color: #000000;
   
-  width:200px;
+  width:auto;
   
 
 }
@@ -85,14 +85,16 @@ height: 500px;
 }
 
 .flex-container6{
+  box-sizing: 100px;
   align-items: center;
   justify-content: center;
   display: flex;
   text-align:center;
+  padding:0px;
 }
 
 
-.flex-container6{
+.flex-container7{
   align-items: center;
   justify-content: center;
   display: flex;
