--- a/styles.css
+++ b/styles.css
@@ -10,156 +10,99 @@
        	}
 
 
-.flex-container {
-  display: flex;
-  justify-content: center;
 
 
-}
-div {
+@font-face {
     font-family: garamond;
-}
-
-.flex-container > div {
-  
-  background-color:#808080;
-
-  text-align: center;
-  margin-bottom:20px;
-
-}
-
-.flex-container2 {
-height: 500px;
-  display: flex;
-  justify-content: center;
-
-  align-content:center
- ;
-
-}
-.flex-container2 > div {
-	height: 400px;
-  width: auto;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: 000000;
-  color: 000000;
-
-}
-
-.flex-container3 {
-  position: relative;
-    right: 20px;">
-  height: 50px;
-  display: flex;
-  justify-content: left;
-  align-content:left;
-  background-color: #000000;
-  
-  width:auto;
-  
-
-}
-
-.flex-container4{
-
- background-color: #000080;
- height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    src: url(garamond.ttf) format('embedded-opentype'),
+       url('garamond.woff2') format('woff2'),
+       url('garamond.woff') format('woff'), 
+         url('garamond.ttf')  format('truetype');
+        }
 
 
+div {
+  font-family: garamond;
 
-
-}
-
-.container5{
-
-  color: #808080;
-  background-color: #808080;
-
-
-}
-
-.flex-container6{
-  box-sizing: 100px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  text-align:center;
-  padding:0px;
-}
-
-
-.flex-container7{
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  text-align:center;
-  flex-wrap:wrap;
-}
-
-a {
-
-    background-color: #000000;
-    height:30px;
-    width: 768px;
-    color: white;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-
-
-}
-
-
-a:hover {
-    color: red;
-}
-
-
-a:active {
-    color: blue;
 }
 
 h1 {
-  padding-top: 50px;
-  padding-bottom:10px;
-    text-align: center;
-    text-transform: uppercase;
-    color:black;
+  text-align: center;
+  color: white;
 }
 
-img {
-	padding-right: 200px;
-	padding-left: 200px
-
-	;
+h3{
+  text-align : center;
+  color: white;
 }
 
-h2 {
+area {
+  text-align: center; 
+  width:max-width;
+}
+form {
+  text-align: center;
+  width:max-width;
+}
 
-    text-align: center;
-    text-transform: uppercase;
-    padding-bottom: 0px;
+select {
+  text-align: center;
+  display:center;
+  width:max-width;
+}
+input { 
+  text-align: center;
+  border-color:grey;
+  background-color: white;
+  width:max-width;
+ }
+
+ input[type=submit] {
+
+    background: #0066A2;
+
+  color: white;
+
+
+
+
+
+  height: 50px;
+
+  width: 100px;
+  border: 1px solid #eee;
+border-radius: 20px;
+  font: bold 15px arial, sans-serif;
+
+
+}
+input[type=submit]:hover {
+
+background: yellow;
+
+color: #fff;
+
+border: 1px solid #eee;
+
+border-radius: 20px;
+
 
 }
 
-p {
-	color:white;
-	padding-top: 0px;
-    text-align: center;
-    padding-bottom:10px;
+
+input[type=submit]:active {
+
+background: green;
+
+color: #fff;
+
+border: 1px solid #eee;
+
+border-radius: 20px;
+
 }
 
-footer {
-	padding-left:4px;
-	padding-top:7px;
-	padding-bottom:7px;
-	text-align: left; 
-	color:white;
+
+br {
+  text-align: center; 
 }
