--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* myStyle.css */
+
 
 
 @font-face {
@@ -10,86 +10,36 @@
        	}
 
 
+.flex-container {
+  display: flex;
+  justify-content: center;
 
 
-@font-face {
-    font-family: garamond;
-    src: url(garamond.ttf) format('embedded-opentype'),
-       url('garamond.woff2') format('woff2'),
-       url('garamond.woff') format('woff'), 
-         url('garamond.ttf')  format('truetype');
-        }
-
-
+}
 div {
-  font-family: garamond;
-
+    font-family: garamond;
 }
-form{
+
+.flex-container > div {
+  
+  background-color:#808080;
+
   text-align: center;
-}
-
-textarea {
-  resize: none;
-  width:75%;
-  border-color: lightblue;
-  color:red;
-  text-decoration-color: red;
-}
-h1 {
-  text-align: center;
-  color: white;
-}
-
-h3{
-  text-align : center;
-  color: white;
-}
-
-area {
-  text-align: center; 
-  width:max-width;
-}
-
-*::-webkit-input-placeholder {
-    color: red;
-}
-
-*::-moz-placeholder {
-    color: red;
-}
-
-
-
-select {
-  text-align: center;
-  display:center;
+  margin-bottom:20px;
 
 }
-input { 
-  align-content: horizontal;
-  text-align: center;
-  border-color:grey;
-  background-color: white;
-  width:75%;
-  text-decoration-color:red;
+input[type=submit]:active {
 
+background: green;
 
- }
+color: #fff;
 
- input[type=submit] {
+border: 1px solid #eee;
 
-    background: #0066A2;
-
-  color: white;
-  height: 50px;
-  width: 100px;
-  border: 1px solid #eee;
-  border-radius: 20px;
-
-
+border-radius: 20px;
 
 }
+
 input[type=submit]:hover {
 
 background: yellow;
@@ -103,23 +53,170 @@ border-radius: 20px;
 
 }
 
-p {
+input[type=submit] {
+
+    background: #0066A2;
+
+  color: white;
+  height: 50px;
+  width: 100px;
+  border: 1px solid #eee;
+  border-radius: 20px;
+
+
+
+}
+.flex-container2 {
+height: 500px;
+  display: flex;
+  justify-content: center;
+
+  align-content:center;
+
+}
+.flex-container2 > div {
+	height: 400px;
+  width: auto;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-}
-
-input[type=submit]:active {
-
-background: green;
-
-color: #fff;
-
-border: 1px solid #eee;
-
-border-radius: 20px;
+  background-color: 000000;
+  color: 000000;
 
 }
 
+.flex-container3 {
+  position: relative;
+    right: 20px;">
+  height: 50px;
+  display: flex;
+  justify-content: left;
+  align-content:left;
+  background-color: #000000;
+  
+  width:auto;
+  
 
-br {
-  text-align: center; 
+}
+
+.flex-container4{
+
+ background-color: #000080;
+ height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+
+
+}
+
+.container5{
+
+  color: #808080;
+  background-color: #808080;
+
+
+}
+
+.flex-container6{
+  display: flex;
+  flex-flow: row nowrap;
+  object-fit: contain;
+  box-sizing: 300px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  text-align:center;
+  padding:0px;
+
+}
+
+
+.flex-container7{
+   display: flex;
+  flex-flow: row nowrap;
+  object-fit: contain;
+  box-sizing: 300px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  text-align:center;
+  padding:0px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  text-align:center;
+  flex-wrap:wrap;
+}
+
+a {
+
+    background-color: #000000;
+    height:30px;
+    width: 768px;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+
+}
+
+
+a:hover {
+    color: red;
+}
+
+
+a:active {
+    color: blue;
+}
+
+h1 {
+  padding-top: 50px;
+  padding-bottom:10px;
+    text-align: center;
+    text-transform: uppercase;
+    color:black;
+}
+
+img {
+	padding-right: 200px;
+	padding-left: 200px
+
+	;
+}
+
+h2 {
+
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 0px;
+
+}
+
+h3 {
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 0px;
+
+}
+
+p {
+	color:white;
+	padding-top: 0px;
+    text-align: center;
+    padding-bottom:10px;
+}
+
+footer {
+	padding-left:4px;
+	padding-top:7px;
+	padding-bottom:7px;
+	text-align: left; 
+	color:white;
 }
