--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,13 @@ form{
   text-align: center;
 }
 
+ul{
+  text-align: center;
+}
+li {
+  text-align: center;
+}
+
 textarea {
   resize: none;
   width:75%;
@@ -44,19 +51,6 @@ h1 {
 h3{
   text-align : center;
   color: black;
-}
-
-ul{
-  
-  text-align: center;
-  text-decoration-color: white;
-  color: white;
-
-}
-li {
-  text-decoration-color: white;
-  color: white;
-  
 }
 
 area {
@@ -80,8 +74,7 @@ select {
 
 }
 input { 
-  align-self: middle;
-  align-content: vertical;
+  align-content: horizontal;
   text-align: center;
   border-color:grey;
   background-color: white;
@@ -91,10 +84,9 @@ input {
 
  }
 
- input[type=text] {
+ input[type=submit] {
 
-  text-align: center;
-  background: #0066A2;
+    background: #0066A2;
 
   color: white;
   height: 50px;
@@ -105,7 +97,7 @@ input {
 
 
 }
-input[type=text]:hover {
+input[type=submit]:hover {
 
 background: yellow;
 
@@ -122,7 +114,7 @@ p {
   text-align: center;
 }
 
-input[type=text]:active {
+input[type=submit]:active {
 
 background: green;
 
