--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,12 @@ form{
 
 ul{
   text-align: center;
+    list-style: none;
+
 }
 li {
   text-align: center;
+   display: inline;
 }
 
 textarea {
