--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,21 @@ form{
   text-align: center;
 }
 
+.flex-container3 {
+  position: relative;
+  right: ;
+  height: 50px;
+  display: flex;
+  justify-content: left;
+  align-content:left;
+  background-color: #000000;
+  
+  width:auto;
+  
+
+}
+
+
 ul{
   text-align: center;
     list-style: none;
@@ -112,6 +127,24 @@ border-radius: 20px;
 
 
 }
+a {
+
+  
+    height:30px;
+    width: 768px;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+
+}
+
+
+
+
+
 
 p {
   text-align: center;
