--- a/styles.css
+++ b/styles.css
@@ -141,25 +141,46 @@ border-radius: 20px;
 }
 
 
- input[type=submit] {
+ .input[type=submit] {
 
-    background: #0066A2;
-
-  color: white;
-  height: 50px;
-  width: 100px;
-  border: 1px solid #eee;
-  border-radius: 20px;
+    position: relative;
+    background-color: #4CAF50;
+    border: none;
+    font-size: 28px;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
 
 
 
 }
-input[type=submit]:hover {
-
-background-color: #3e8e41
-
-
+.input:after{
+      content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
 }
+
+.button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
+
+
 a {
 
   
