--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ border-radius: 20px;
 }
 
 
- .input[type=submit] {
+ input[type=submit] {
 
     position: relative;
     background-color: #4CAF50;
@@ -160,7 +160,7 @@ border-radius: 20px;
 
 
 }
-.input:after{
+input:after{
       content: "";
     background: #90EE90;
     display: block;
@@ -172,8 +172,7 @@ border-radius: 20px;
     opacity: 0;
     transition: all 0.8s
 }
-
-.button:active:after {
+input:active:after {
     padding: 0;
     margin: 0;
     opacity: 1;
