--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* myStyle.css */
-
 
 @font-face {
     font-family: garamond;
@@ -20,7 +18,10 @@
          url('garamond.ttf')  format('truetype');
         }
 
-
+h2 {
+  text-align:center;
+  color:white;
+}
 div {
   font-family: garamond;
 
@@ -69,7 +70,7 @@ h1 {
 
 h3{
   text-align : center;
-  color: black;
+  color: white;
 }
 
 area {
@@ -151,8 +152,8 @@ border-radius: 20px;
     padding: 20px;
     width: 200px;
     text-align: center;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
     text-decoration: none;
     overflow: hidden;
     cursor: pointer;
@@ -160,8 +161,19 @@ border-radius: 20px;
 
 
 }
+h4 {
+  text-align: center;
+  color: white;
+}
+img {
+ 
+  
+    margin-left: auto;
+    margin-right: auto 
+}
+
 input:after{
-      content: "";
+    content: "";
     background: #90EE90;
     display: block;
     position: absolute;
@@ -170,8 +182,10 @@ input:after{
     margin-left: -20px!important;
     margin-top: -120%;
     opacity: 0;
-    transition: all 0.8s
+    transition: all 0.4s
 }
+
+
 input:active:after {
     padding: 0;
     margin: 0;
@@ -208,6 +222,7 @@ footer{
 
 p {
   text-align: center;
+  color:white;
 }
 
 
