--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,16 @@ h3{
   color: white;
 }
 
+textarea{
+  width:75%;
+  height: 500px;
+  height:150px;
+}
+
 area {
   text-align: center; 
-  width:max-width;
+  width:300px;
+  height:150px;
 }
 
 *::-webkit-input-placeholder {
@@ -85,6 +92,8 @@ area {
 *::-moz-placeholder {
     color: red;
 }
+
+
 
 
 
